# ai-code-reviewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD-simple.md  PRD-technical.md  README.md  SECURITY.md  benchmarks.py  demo.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
src/: __init__.py  __main__.py  ai_client.py  ai_integration.py  analyzer.py  async_support.py  bug_detector.py  cache.py  cli.py  commands.py  config.py  exceptions.py  filters.py  formatter.py  interactive.py  learning.py  logging_config.py  models.py  notifications.py  pipeline.py  plugins.py  progress.py  rate_limiter.py  reporter.py  security.py  security_checks.py  statistics.py  utils.py  validation.py  version.py
tests/: conftest.py  test_ai_client.py  test_analyzer.py  test_cache.py  test_complete.py  test_formatter.py  test_progress.py  test_rate_limiter.py  test_reporter.py  test_security.py
