[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-reviewer"
version = "2.0.0"
description = "Multi-agent AI code review tool inspired by Claude Code's production architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Himal Badu", email = "himalbaduhimalbadu@gmail.com"},
]
keywords = ["code-review", "ai", "security", "static-analysis", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "bandit>=1.7",
]

[project.scripts]
ai-reviewer = "src.cli:cli"

[project.urls]
Homepage = "https://github.com/Himal-Badu/ai-code-reviewer"
Repository = "https://github.com/Himal-Badu/ai-code-reviewer"
Issues = "https://github.com/Himal-Badu/ai-code-reviewer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
